--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "navi",
-    "icon": "./path/to/your/app-icon.png",
+    "icon": "./icon.png",
     "version": "1.0.0",
     "slug": "navi",
     "sdkVersion": "27.0.0",
